--- a/G4101_lab04_estadistica_distribuciones.qmd
+++ b/G4101_lab04_estadistica_distribuciones.qmd
@@ -26,7 +26,7 @@ execute:
 
 library(tidyverse)
 
-theme_set(theme_minimal(base_family = 14))
+theme_set(theme_minimal(base_size = 14))
 ```
 
 En general existen 4 fucniones basicas para todas las distribuciones, empiezan con las letras `d`, `p`, `q` y `r` y les sigue el nombre de la distribucion.
