--- a/G4101_lab09_estadistica_noparametrica.qmd
+++ b/G4101_lab09_estadistica_noparametrica.qmd
@@ -37,7 +37,7 @@ library(easystats)
 
 options(digits = 3)
 
-theme_set(theme_minimal(base_family = 14))
+theme_set(theme_minimal(base_size = 14))
 
 signed_rank = function(x) sign(x) * rank(abs(x))
 ```
