--- a/G4101_lab10_estadistica_direccional.qmd
+++ b/G4101_lab10_estadistica_direccional.qmd
@@ -28,7 +28,7 @@ library(GMisc)
 library(CircStats)
 library(tidyverse)
 
-theme_set(theme_minimal(base_family = 14))
+theme_set(theme_minimal(base_size = 14))
 ```
 
 # Analisis de una muestra
